--- a/general/index.html
+++ b/general/index.html
@@ -22,6 +22,19 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
+<style>
+    body {
+    user-select: none;
+    margin: 0;
+    background-color: #171717; /* Dark background */
+    height: 100vh;
+    font-family: 'Inter', sans-serif;
+    color: #ffffff; /* White text color */
+    opacity: 0; /* Start with invisible text */
+    animation: fadeIn 4s forwards; /* Fade-in animation for the page */
+}
+
+</style>
     </head>
     <body>
      
@@ -45,7 +58,7 @@
         <br>
         <br>
         <div class="text"></div>
-        <div id="splash">UNKNOWN</div>
+        <div id="splash">Loading...</div>
         <br>
         <center>
             <form id="uv-form">
@@ -70,7 +83,7 @@
           <br>
           <center>
             <a href=" ">
-            <div id="ads" style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px; box-shadow: 0px 12px 36px rgba(0, 0, 0, 0.5); /* Slightly increase shadow on lift */">
+            <div id="ads" style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px; box-shadow: 0px 12px 36px rgba(22, 22, 22, 0.5); /* Slightly increase shadow on lift */">
     
             <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
           </div></a>
