--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -62,15 +62,15 @@
           </div>
               <br>
               <div class="row">
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/deadpoolandwolverine.jpeg">
+                <div class="column" data-category="Other">
+                    <a href="/misc/movies/deadpool3.html"><img src="/img/imgs/imgs/deadpoolandwolverine.jpeg">
                     <div class="description">
                         <h2>Deadpool 3</h2>
                         <p>WOLVERINE</p> <!-- Shortened description --></a>
                     </div>
                 </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/imgs/imgs/trap.jpeg">
+                <div class="column" data-category="Horror">
+                    <a href="/misc/movies/trap.html"><img src="/img/imgs/imgs/trap.jpeg">
                     <div class="description">
                         <h2>Trap</h2>
                         <p>THE bay harbour BUTCHER</p> <!-- Shortened description --></a>
