--- a/general/index.html
+++ b/general/index.html
@@ -60,7 +60,7 @@
           <br>
           <center> 
            <a href="/general/pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
-           <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="/general/pages/premium.html"><button class="button">Premium</button></a>&nbsp;&nbsp;&nbsp;
            <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our Discord</button></a>&nbsp;&nbsp;&nbsp;
            <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
           </center>
