--- a/general/pages/credits.html
+++ b/general/pages/credits.html
@@ -39,7 +39,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Credits</div>
+        <center><div class="text">Credits</div></center>
         <br>
        
     </body>
