--- a/general/pages/faq.html
+++ b/general/pages/faq.html
@@ -40,7 +40,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">FAQ</div>
+        <center><div class="text">FAQ</div></center>
         <br>
        
     </body>
