--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -40,7 +40,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Media/Movies</div>
+        <center><div class="text">Starlight's Media/Movies</div></center>
         <br>
         <center>
             <select id="categorySelect">
