--- a/general/pages/policy.html
+++ b/general/pages/policy.html
@@ -42,7 +42,7 @@
         <br>
         <br>
         <div id="legal">
-            <h1 class="text">Policy</h1>
+            <center><h1 class="text">Policy</h1></center>
             <div>
             <h2>
             
@@ -74,7 +74,7 @@
             <br>
             </div>
             <div>
-            Last updated on Monday, October 1, Tuesday
+            <h2>Last updated on Monday, October 1, Tuesday</h2>
             </div>
      <br>
      <br>
