--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -41,7 +41,7 @@
         <br>
         <br>
         <br>
-        <div class="text">Starlight's Search/Proxy</div>
+        <center><div class="text">Starlight's Search/Proxy</div></center>
         <br>
         <center>
             <form id="uv-form">
@@ -63,7 +63,6 @@
 <script src="/static/search.js" defer></script>
 <script src="/static/index.js" defer></script>
 <script src="/static/error.js" defer></script>
-<script src="/static/embed.js"></script>
 </html>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
