--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -38,7 +38,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Settings</div>
+        <center><div class="text">Settings</div></center>
         <br>
         <div id="settingsContainer">
             <div class="settingsColumn">
