--- a/general/pages/suggestions.html
+++ b/general/pages/suggestions.html
@@ -42,7 +42,7 @@
         <br>
         <br>
         <br>
-<h1 class="text">Suggestions</h1>
+        <center><h1 class="text">Suggestions</h1></center>
 <br>
 <form onsubmit="sendContact(event)" id="forms">
   <div class="mb-3">
