--- a/misc/apps/youtube.html
+++ b/misc/apps/youtube.html
@@ -166,7 +166,7 @@
   
   <div class="container-iframe">
     <div class="iframe-container">
-        <iframe id="iframe" name="iframe" src="https://lagged.com"></iframe>
+        <iframe id="iframe" name="iframe" src="https://yt-youtube.netlify.app"></iframe>
     </div>
 
     <div class="controls">
@@ -191,9 +191,6 @@
     
 </div>
               
-<div id="imageContainer" class="image-container"></div>     
-<script src="/general/js/recommende.js"></script>
-
 <div class="desc">
   <h2 class="desc-title">Title</h2>
   <p>Youtube</p>
