--- a/misc/movies/trap.html
+++ b/misc/movies/trap.html
@@ -166,7 +166,7 @@
   
   <div class="container-iframe">
     <div class="iframe-container">
-        <iframe id="iframe" name="iframe" src="https://vidlink.pro/movie/1032823"></iframe>
+        <iframe id="iframe" name="iframe" src="https://moviesapi.club/movie/1032823"></iframe>
     </div>
 
     <div class="controls">
@@ -191,9 +191,6 @@
     
 </div>
               
-<div id="imageContainer" class="image-container"></div>     
-<script src="/general/js/recommend.js"></script>
-
 <div class="desc">
   <h2 class="desc-title">Title</h2>
   <p>Deadpool And Wolverine</p>
