--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -39,7 +39,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">StarlightAI</div>
+        <center><div class="text">StarlightAI</div></center>
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
