--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -39,7 +39,8 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Partners</div>
+        <center><div class="text">Starlight's Partners</div></center>
+        <center><h2>We are proud to partner with the following organizations and servers.</h2></center>
         <br>
        <main class="main">
         <section class="partners">
