--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -40,7 +40,7 @@
         </nav>
         <br>
         <br>
-        <div class="text">Starlight's Utilities/Apps</div>
+        <center><div class="text">Starlight's Utilities/Apps</div></center>
         <br>
         <center>
             <select id="categorySelect">
