--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -23,7 +23,8 @@
 </script>
     </head>
     <body>
-   
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
@@ -40,8 +41,7 @@
         <br>
         <br>
         <center><div class="text">Starlight's Partners</div></center>
-        <center><h2>We are proud to partner with the following organizations and servers.</h2></center>
-        <br>
+        
        <main class="main">
         <section class="partners">
             <div class="partner" style="animation-delay: 0.1s;">
