--- a/general/pages/policy.html
+++ b/general/pages/policy.html
@@ -23,7 +23,8 @@
 </script>
     </head>
     <body>
-  
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
@@ -38,6 +39,9 @@
 
             </div>
         </nav>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -76,8 +80,6 @@
             <div>
             <h2>Last updated on Monday, October 1, Tuesday</h2>
             </div>
-     <br>
-     <br>
     </body><script src="/general/js/cloak.js"></script>
 </html>
     <!-- Include Particle.js library -->
