--- a/general/pages/terms.html
+++ b/general/pages/terms.html
@@ -23,7 +23,8 @@
 </script>
     </head>
     <body>
-  
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
@@ -38,6 +39,9 @@
 
             </div>
         </nav>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
