--- a/misc/movies/deadpool3.html
+++ b/misc/movies/deadpool3.html
@@ -145,7 +145,8 @@
 </style>
     </head>
     <body>
-    
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
@@ -166,7 +167,7 @@
   
   <div class="container-iframe">
     <div class="iframe-container">
-        <iframe id="iframe" name="iframe" src="https://moviesapi.club/movie/533535"></iframe>
+        <iframe id="iframe" name="iframe" src="https://vidsrc.rip/embed/movie/533535"></iframe>
     </div>
 
     <div class="controls">
