--- a/404.html
+++ b/404.html
@@ -23,6 +23,9 @@
 </script>
     </head>
     <body>
+
+<script src="/general/js/eruda.js"></script>
+<script>eruda.init();</script>
         <div id="particles-js"></div>
         <nav>
             <a href="/general/index.html" class="left-link">Starlight</a>
