--- a/misc/games/100ng.html
+++ b/misc/games/100ng.html
@@ -145,7 +145,8 @@
 </style>
     </head>
     <body>
-    
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
         <nav>
