BIG MOVIE UPDATE YOU STUPID NI

--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -55,24 +55,23 @@
             </div>
           </center>
     <br>
-    <center>
-    <div id="shortcuts">
-        <center><h2>Shortcuts</h2></center>
-        <div class="buny">
-        <img src="/img/images/thumbnails/googlepng.png" class="imgs">
-        <center><h4>Google</h4></center>
-        </div>
-        <div class="buny">
-            <img src="/img/images/thumbnails/tiktok.png" class="imgs">
-           <center><h2>Tiktok</h2></center>
-           </div>
-           <div class="buny">
-            <img src="/img/images/thumbnails/youtube.jpeg" class="imgs">
-            <center><h2>Youtube</h2></center>
-           </div>
-              
+    <p class="smallahhtext">Shortcuts</p>
+    <div class="quicklink-container" id="quicklink-container">
+       <a class="quicklink-button" href=" ">
+          <img src="/img/images/thumbnails/googlepng.png" alt="Google">
+          <p>Google</p>
+       </a>
+
+       <a class="quicklink-button" href=" ">
+          <img src="/img/images/thumbnails/youtube.jpeg" alt="Now.gg">
+          <p>Now.GG</p>
+       </a>
+
+       <a class="quicklink-button" href=" ">
+          <img src="/img/images/thumbnails/tiktok.png" alt="Tiktok">
+          <p>Tiktok</p>
+       </a>
     </div>
-    </center>
     </body>
 
     <script src="/general/js/cloak.js"></script>
