--- a/misc/games/1.html
+++ b/misc/games/1.html
@@ -174,13 +174,13 @@
    &nbsp;&nbsp;
    <a onclick="toggleFullscreen()"><img src="/img/fullscreen.png" height="30" width="30" class="icon"> </a>
    <a onclick="refreshIframe()"><img src="/img/reload.png" height="30" width="30" class="icon"> </a>
-   <a href="/library/local-games/1/index.html"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
    <div class="share-container">
    <a id="share-button"><img src="/img/sharee.png" height="30" width="30" class="icon"> </a>
      <div class="notification" id="notification">
         <span id="link-text"></span>
         <button class="copy-button" id="copy-button">Copy</button>
     </div>
+    <a href="/library/local-games/1/index.html" target="_blank"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
 </div>
 </div>
 
@@ -197,7 +197,7 @@
   <h2 class="desc-title">Title</h2>
   <p>1</p>
     <h2 class="desc-title">Description</h2>
-  <p>"1 is a captivating remix of the classic 2048 puzzle game, where players combine numbered tiles to reach higher values while navigating a vibrant, ever-shifting grid filled with quirky power-ups and challenges."</p>
+  <p>1 is a captivating remix of the classic 2048 puzzle game, where players combine numbered tiles to reach higher values while navigating a vibrant, ever-shifting grid filled with quirky power-ups and challenges.</p>
     <h2 class="desc-title">Creator</h2>
     <p>3kh0<p>
     <h2 class="desc-title">Keybinds</h2>
