--- a/misc/games/1v1space.html
+++ b/misc/games/1v1space.html
@@ -181,6 +181,7 @@
              <span id="link-text"></span>
              <button class="copy-button" id="copy-button">Copy</button>
          </div>
+         <a href="/library/local-games/1v1space/index.html" target="_blank"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
      </div>
 </div>
 
