--- a/misc/apps/lagged.html
+++ b/misc/apps/lagged.html
@@ -180,6 +180,7 @@
         <span id="link-text"></span>
         <button class="copy-button" id="copy-button">Copy</button>
     </div>
+    <a href="https://lagged.com" target="_blank"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
 </div>
 </div>
 
