--- a/misc/games/2020-game.html
+++ b/misc/games/2020-game.html
@@ -181,6 +181,7 @@
              <span id="link-text"></span>
              <button class="copy-button" id="copy-button">Copy</button>
          </div>
+         <a href="https://starlight-assets.vercel.app/2020-game/index.html" target="_blank"><img src="/img/opendirect.png" height="30" width="30" class="icon"></a>
      </div>
 </div>
 
