--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -43,8 +43,8 @@
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
         <br>
-        <input type="text" id="movies-search" placeholder="Search for a movie or series...">
-    <button id="movies-button" onclick="searchMovies()">Search</button>
+        <input type="text" id="search" placeholder="Search for a movie or series...">
+    <button onclick="searchMovies()">Search</button>
     
     <div id="movie-list"></div>
 
