another another huge movie update for v1

--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -85,14 +85,14 @@
                     </div>
                 </div>
                 <div class="column" data-category="Shooter">
-                    <a href="/misc/games/1v1lol.html"><img src="/img/images/thumbnails/1v1.jpg ">
+                    <a href="/misc/games/1v1lol.html"><img src="/img/images/thumbnails/1v1.jpeg">
                     <div class="description">
                         <h2>1v1.lol</h2>
                         <p>Simple Battle royale game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Arcade">
-                    <a href="/misc/games/1v1space.html"><img src="/img/images/thumbnails2/1v1space.png ">
+                    <a href="/misc/games/1v1space.html"><img src="/img/images/thumbnails/1v1space.png">
                     <div class="description">
                         <h2>1v1.space</h2>
                         <p>Space game</p> <!-- Shortened description --></a>
