--- a/general/pages/premium.html
+++ b/general/pages/premium.html
@@ -49,28 +49,24 @@
         <main class="main">
             <section class="partners">
                 <div class="partner" style="animation-delay: 0.1s;">
-                    <img src="">
-                    <h2> </h2>
-                    <p> </p>
+                    <img src="/img/images/thumbnails/leak.png">
+                    <h2>Exclusive leaks</h2>
+                    <p>Get exclusive leaks and beta links for our website that shows the latest features</p>
                 </div>
                 <div class="partner" style="animation-delay: 0.2s;">
-                    <img src="">
-                    <h2> </h2>
-                    <p> </p>
+                    <img src="/img/images/thumbnails/chat.jpg">
+                    <h2>Chat system</h2>
+                    <p>You get to use the exclusive chat system where you can talk to anyone globally.</p>
                 </div>
                 <div class="partner" style="animation-delay: 0.3s;">
-                    <img src=" ">
-                    <h2> </h2>
-                    <p> </p>
-                </div>
-                <div class="partner" style="animation-delay: 0.4s;">
-                    <img src=" ">
-                    <h2> </h2>
-                    <p> </p>
+                    <img src="/img/images/thumbnails/premiumlinks.png">
+                    <h2>Private links</h2>
+                    <p>You get your own private links which is not shared with anyone else.</p>
                 </div>
             </section>
         </main>
      </div>
+     <center><h2>Subscribing to Starlight+ is easy, just boost our discord server</h2></center>
      <br>
      <br>
     </body><script src="/general/js/cloak.js"></script>
