--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -86,49 +86,49 @@
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/calculator.png">
+                    <a href="/misc/apps/calculator.html"><img src="/img/images/thumbnails/calculator.png">
                     <div class="description">
                         <h2>Calculator</h2>
                         <p>Simple Calculator using JS</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/htmlcoder.png">
+                    <a href="/misc/apps/htmlcoder.html"><img src="/img/images/thumbnails/htmlcoder.png">
                     <div class="description">
                         <h2>HTML coder</h2>
                         <p>for super duper cool web devs</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/calender.png ">
+                    <a href="/misc/apps/calculator.html"><img src="/img/images/thumbnails/calender.png ">
                     <div class="description">
                         <h2>Calender</h2>
                         <p>Set notifications for dates and stuff idk</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/drawingpad.png">
+                    <a href="/misc/apps/drawingpad.html"><img src="/img/images/thumbnails/drawingpad.png">
                     <div class="description">
                         <h2>Drawing Pad</h2>
                         <p>Draw anything</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/passwordgenerator.png ">
+                    <a href="/misc/apps/passwordgenerator.html"><img src="/img/images/thumbnails/passwordgenerator.png ">
                     <div class="description">
                         <h2>Password Generator</h2>
                         <p>generate cool passwords and usernames</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/texttospeech.png">
+                    <a href="/misc/apps/texttospeech.html"><img src="/img/images/thumbnails/texttospeech.png">
                     <div class="description">
                         <h2>Text to speech</h2>
                         <p>yes you can make it say the n word</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href=""><img src="/img/images/thumbnails/todolist.png">
+                    <a href="/misc/apps/todolist.html"><img src="/img/images/thumbnails/todolist.png">
                     <div class="description">
                         <h2>To do list</h2>
                         <p>To do ur lists</p> <!-- Shortened description --></a>
