--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -21,6 +21,82 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
+<style>
+    #movie-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+.movie {
+    background: rgb(30, 30, 30);
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 15px;
+    width: 200px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.movie:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+.movie img {
+    width: 100%;
+    border-radius: 10px;
+}
+.movie h4 {
+    margin: 10px 0;
+    font-size: 18px;
+    color: #007BFF;
+}
+.movie a {
+    color: white;
+    text-decoration: none;
+    transition: all 0.5 ease;
+}
+.movie a:hover {
+    color: rgb(232, 232, 232);
+    text-decoration: none;
+    transition: all 0.5 ease;
+}
+#search{
+    background-color: #222222;
+    color: white;
+   outline: none;
+   border: none;
+   border-radius: 8px;
+   height: 50px;
+   width: 60%;
+   padding: 10px; 
+   box-shadow: 0px 0px 10px #000;
+   transition: all 0.5s ease;
+   text-align: center;
+}
+#search:hover{
+   transform: translateY(-3px);
+   box-shadow: 0px 0px 10px #1d1d1d;
+}
+button{
+    text-align: center;
+    background-color: #222222;
+    color: white;
+    outline: none;
+   border: none;
+   border-radius: 8px;
+   height: 50px;
+   width: 200px;
+   padding: 10px; 
+   box-shadow: 0px 0px 10px #000;
+   transition: all 0.5s ease;
+   text-align: center;
+}
+button:hover{
+   transform: translateY(-3px);
+   box-shadow: 0px 0px 10px #1d1d1d;
+}
+</style>
     </head>
     <body>
         <script src="/general/js/eruda.js"></script>
@@ -43,7 +119,7 @@
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
         <br>
-        <input type="text" id="search" placeholder="Search for a movie or series...">
+        <input type="text" id="search" placeholder="Search our movie library...">
     <button onclick="searchMovies()">Search</button>
     
     <div id="movie-list"></div>
