--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -21,6 +21,7 @@
 
   gtag('config', 'G-36EM66LHER');
 </script>
+
     </head>
     <body>
         <script src="/general/js/eruda.js"></script>
@@ -55,23 +56,28 @@
             </div>
           </center>
     <br>
-    <p class="smallahhtext">Shortcuts</p>
+    <h2><p class="smallahhtext" style="text-align: center;">Shortcuts</p></h2>
     <div class="quicklink-container" id="quicklink-container">
-       <a class="quicklink-button" href=" ">
+       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Cgmoelg.aoo%2F%3Dgus%5Drf%3Dqsn">
           <img src="/img/images/thumbnails/googlepng.png" alt="Google">
           <p>Google</p>
        </a>
 
-       <a class="quicklink-button" href=" ">
+       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-">
           <img src="/img/images/thumbnails/youtube.jpeg" alt="Now.gg">
-          <p>Now.GG</p>
+          <p>Youtube</p>
        </a>
 
-       <a class="quicklink-button" href=" ">
+       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Ctkkvoi.aoo%2Fgxrlmrg">
           <img src="/img/images/thumbnails/tiktok.png" alt="Tiktok">
           <p>Tiktok</p>
        </a>
-    </div>
+
+       <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-nmw%2Cge%2F">
+        <img src="/img/images/thumbnails/nowgg.png" alt="Tiktok">
+        <p>Now.GG</p>
+     </a>
+       </div>
     </body>
 
     <script src="/general/js/cloak.js"></script>
