--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -49,7 +49,7 @@
 .movie h4 {
     margin: 10px 0;
     font-size: 18px;
-    color: #007BFF;
+    color: #ffffff;
 }
 .movie a {
     color: white;
@@ -62,15 +62,16 @@
     transition: all 0.5 ease;
 }
 #search{
+    justify-content: center;
     background-color: #222222;
     color: white;
    outline: none;
    border: none;
    border-radius: 8px;
    height: 50px;
-   width: 60%;
+   width: 50%;
    padding: 10px; 
-   box-shadow: 0px 0px 10px #000;
+   box-shadow: 0px 0px 10px #121212;
    transition: all 0.5s ease;
    text-align: center;
 }
@@ -79,6 +80,7 @@
    box-shadow: 0px 0px 10px #1d1d1d;
 }
 button{
+    justify-content: center;
     text-align: center;
     background-color: #222222;
     color: white;
@@ -88,13 +90,13 @@ button{
    height: 50px;
    width: 200px;
    padding: 10px; 
-   box-shadow: 0px 0px 10px #000;
+   box-shadow: 0px 0px 10px #151515;
    transition: all 0.5s ease;
    text-align: center;
 }
 button:hover{
    transform: translateY(-3px);
-   box-shadow: 0px 0px 10px #1d1d1d;
+   box-shadow: 0px 0px 10px #212121;
 }
 </style>
     </head>
