--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -55,8 +55,7 @@
               <pre id="uv-error-code"></pre>
             </div>
           </center>
-    <br>
-    <h2><p class="smallahhtext" style="text-align: center;">Shortcuts</p></h2>
+    <center><h4>Shortcuts</h4></center>
     <div class="quicklink-container" id="quicklink-container">
        <a class="quicklink-button" href="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-wuw%2Cgmoelg.aoo%2F%3Dgus%5Drf%3Dqsn">
           <img src="/img/images/thumbnails/googlepng.png" alt="Google">
