big update for movies and settings

--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -56,8 +56,20 @@
                 <select id="faviconSelectInput">
             
                     <option value="/img/starlight.png">--Select Favicon--</option>
-                    <option value="/img/favicons/google.png">Google.com</option>
-                    <option value=" ">Favicon 2</option>
+                    <option value="/img/images/icons/google.ico">Google</option>
+                    <option value="/img/images/icons/bing.ico">Bing</option>
+                    <option value="/img/images/icons/chromenewtab.ico">Chrome new tab</option>
+                    <option value="/img/images/icons/desmos.ico">Desmos</option>
+                    <option value="/img/images/icons/gmail.ico">Gmail</option>
+                    <option value="/img/images/icons/googleclassroom.ico">Google Classroom</option>
+                    <option value="/img/images/icons/googledrive.ico">Google Drive</option>
+                    <option value="/img/images/icons/googlekeeps.ico">Google Keep</option>
+                    <option value="/img/images/icons/googlesheets.ico">Google Sheets</option>
+                    <option value="/img/images/icons/googleslides.ico">Google Slides</option>
+                    <option value="/img/images/icons/ixl.ico">Ixl</option>
+                    <option value="/img/images/icons/khanacademy.ico">Khan Academy</option>
+                    <option value="/img/images/icons/pornhub.ico">Pornhub</option>
+                    <option value="/img/images/icons/wikipedia.ico">Wikipedia</option>
                 </select>
                 <button id="saveFaviconSelectButton">Save</button>
             </div>
