--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -95,8 +95,15 @@
                 <div class="column" data-category="Tools">
                     <a href="/misc/apps/htmlcoder.html"><img src="/img/images/thumbnails/htmlcoder.png">
                     <div class="description">
-                        <h2>HTML coder</h2>
+                        <h2>HTML Coder</h2>
                         <p>for super duper cool web devs</p> <!-- Shortened description --></a>
+                    </div>
+                </div>
+                <div class="column" data-category="Tools">
+                    <a href="/misc/apps/html-coder-v2.html"><img src="/img/images/thumbnails/htmlcoder.png">
+                    <div class="description">
+                        <h2>HTML Coder V2</h2>
+                        <p>Multiple language code editor</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
