--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -29,6 +29,7 @@
     margin-top: 20px;
 }
 #movie-list {
+gap: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -71,42 +72,46 @@
     transition: all 0.5 ease;
 }
 #search{
-    justify-content: center;
-    background-color: #222222;
-    color: white;
-   outline: none;
-   border: none;
-   border-radius: 8px;
-   height: 50px;
-   width: 50%;
-   padding: 10px; 
-   box-shadow: 0px 0px 10px #121212;
-   transition: all 0.5s ease;
-   text-align: center;
-   align-items: center;
+    display: flex;
+	justify-content: center;
+	padding: 20px;
 }
-#search:hover{
-   transform: translateY(-3px);
-   box-shadow: 0px 0px 10px #1d1d1d;
+#search input{
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    outline: none;
+    background-color: #1d1d1d; /* Dark background */
+	width: 50%;
+	padding: 20px;
+	border: none;
+	border-radius: 10px;
+	font-size: 16px;
+	color: #ffffff;
+    transition: all 0.3s ease;
+}
+#search input:hover{
+    background-color:rgba(74, 74, 74, 0.2); /* Dark background */
+    box-shadow: 0 2px 10px rgba(74, 74, 74, 0.2);
+}
+#search input::placeholder{
+    color: #aaaaaa;
+	font-family: 'Montserrat', sans-serif;
 }
 button{
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: #222222;
-    color: white;
-    outline: none;
-   border: none;
-   border-radius: 8px;
-   height: 50px;
-   padding: 10px; 
-   box-shadow: 0px 0px 10px #151515;
-   transition: all 0.5s ease;
-   text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    font-family: 'Montserrat', sans-serif;
+    background-color: #1d1d1d; /* Dark background */
+	padding: 20px 20px;
+	margin-left: 10px;
+	border: none;
+	border-radius: 10px;
+	color: #ffffff;
+	font-size: 16px;
+	cursor: pointer;
+	transition: background-color 0.3s;
 }
 button:hover{
-   transform: translateY(-3px);
-   box-shadow: 0px 0px 10px #212121;
+    box-shadow: 0 2px 10px rgba(106, 106, 106, 0.2);
+	background-color: #606060;
 }
 </style>
     </head>
