--- a/storage/movies.html
+++ b/storage/movies.html
@@ -275,3 +275,4 @@
         <script src="/general/js/settings.js"></script>
         <script src="/general/js/game.js"></script>
         <script src="/general/js/moviesembed.js"></script>
+        <script src="/general/js/movies.js"></script>
