--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -71,12 +71,12 @@ gap: 20px;
     text-decoration: none;
     transition: all 0.5 ease;
 }
-#search{
+#search-list{
     display: flex;
 	justify-content: center;
 	padding: 20px;
 }
-#search input{
+#search{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     outline: none;
     background-color: #1d1d1d; /* Dark background */
@@ -88,11 +88,11 @@ gap: 20px;
 	color: #ffffff;
     transition: all 0.3s ease;
 }
-#search input:hover{
+#search:hover{
     background-color:rgba(74, 74, 74, 0.2); /* Dark background */
     box-shadow: 0 2px 10px rgba(74, 74, 74, 0.2);
 }
-#search input::placeholder{
+#search::placeholder{
     color: #aaaaaa;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -136,8 +136,10 @@ button:hover{
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
         <br>
+        <div id="search-bar">
         <input type="text" id="search" placeholder="Search our movie library...">
     <button onclick="searchMovies()">Search</button>
+        </div>
     
     <div id="movie-list"></div>
 
