--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -136,11 +136,12 @@ button:hover{
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
         <br>
+        <center>
         <div id="search-bar">
         <input type="text" id="search" placeholder="Search our movie library...">
     <button onclick="searchMovies()">Search</button>
         </div>
-    
+    </center>
     <div id="movie-list"></div>
 
      
