--- a/storage/nowgg bypass/index.html
+++ b/storage/nowgg bypass/index.html
@@ -9,6 +9,6 @@
     }
 </style>
 <body>
-    <iframe src="https://starlight-phi.vercel.app/static/starlight/hvtrs8%2F-nmw%2Cge%2Fcprs-rmbnoz-aoppmrctkol%2F7369-rmbnoz.jtol" id="myIframe"></iframe>
+    <iframe src="/static/embed.html#https://now.gg/apps/roblox-corporation/5349/roblox.html" id="myIframe"></iframe>
     <button onclick="refreshIframe()">Fix</button>
 </body>
