--- a/static/embed.html
+++ b/static/embed.html
@@ -1,1 +1,7 @@
 <script src="embed.js"></script>
+<script src="/static/uv/uv.bundle.js" defer></script>
+<script src="/static/uv/uv.config.js" defer></script>
+<script src="/static/register-sw.js" defer></script>
+<script src="/static/search.js" defer></script>
+<script src="/static/index.js" defer></script>
+<script src="/static/error.js" defer></script>
