--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -74,11 +74,20 @@
                 <button id="saveFaviconSelectButton">Save</button>
             </div>
             <div class="settingsColumn">
-                <center><h1>About:blank</h1></center>
-           
-                <center>
-                <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
-                </center>
+                <div class="settings-container">
+                    <center><h1>Cloaking settings</h1></center>
+                    <div class="toggle-container">
+                      <label for="popupToggle">Enable Forced cloaking</label>
+                      <label class="toggle-switch">
+                        <input type="checkbox" id="popupToggle">
+                        <span class="slider"></span>
+                      </label>
+                    </div>
+                  </div>
+                  <a id="openScriptButton"><button>Open about:blank</button></a>
+            </div>
+            <div class="settingsColumn">
+
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
