--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -22,20 +22,14 @@
   gtag('config', 'G-36EM66LHER');
 </script>
 <style>
-    #movie-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
-}
-#movie-list {
+#results {
 gap: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
 }
-.movie {
+.item {
     font-weight: 700;
         position: relative;
         width: 150px; /* Width of the square */
@@ -46,32 +40,32 @@ gap: 20px;
         border-radius: 1px;
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
-.movie:hover {
+.item:hover {
     transform: translateY(-10px);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
-.movie img {
+.item img {
     width: 100%;
         height: 100%;
         border-radius: 10px;
         transition: opacity 0.5s ease; /* Slowed down the transition */
 }
-.movie h4 {
+.item h4 {
     margin: 10px 0;
     font-size: 18px;
     color: #ffffff;
 }
-.movie a {
+.item a {
     color: white;
     text-decoration: none;
     transition: all 0.5 ease;
 }
-.movie a:hover {
+.item a:hover {
     color: rgb(232, 232, 232);
     text-decoration: none;
     transition: all 0.5 ease;
 }
-#search-list{
+#search-bar{
     display: flex;
 	justify-content: center;
 	padding: 20px;
@@ -113,6 +107,39 @@ button:hover{
     box-shadow: 0 2px 10px rgba(106, 106, 106, 0.2);
 	background-color: #606060;
 }
+
+#results, #popularMovies, #popularTVShows, #featured {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Adjusted size */
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        #popup {
+            display: none;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+        #popupContent {
+            background-color: #444;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        #popup input {
+            margin: 10px;
+            padding: 10px;
+            width: 50px;
+        }
+        #closePopup {
+            margin-top: 10px;
+            padding: 10px;
+        }
 </style>
     </head>
     <body>
@@ -135,15 +162,23 @@ button:hover{
         <br>
         <br>
         <center><div class="text">Starlight's Media/Movies</div></center>
-        <br>
-        <center>
         <div id="search-bar">
-        <input type="text" id="search" placeholder="Search our movie library...">
-    <button onclick="searchMovies()">Search</button>
+            <input type="text" id="search" placeholder="Search for a movie or TV show...">
+            <button>Search</button>
         </div>
-    </center>
-    <div id="movie-list"></div>
+        <div id="results"></div>
 
+        <!-- Popup for season and episode input -->
+        <div id="popup">
+            <div id="popupContent">
+                <h2>Enter Season and Episode</h2>
+                <input type="number" id="seasonInput" placeholder="Season" min="1">
+                <input type="number" id="episodeInput" placeholder="Episode" min="1">
+                <br>
+                <button id="closePopup">Submit</button>
+            </div>
+        </div>
+        
      
     </body>
 </html><script src="/general/js/cloak.js"></script>
