--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -52,42 +52,16 @@
                 <button id="saveTitleFaviconButton">Save</button>
             </div>
             <div class="settingsColumn">
-                <center><h1>Tab Cloak</h1></center>
-                <select id="faviconSelectInput">
-            
-                    <option value="/img/starlight.png">--Select Favicon--</option>
-                    <option value="/img/images/icons/google.ico">Google</option>
-                    <option value="/img/images/icons/bing.ico">Bing</option>
-                    <option value="/img/images/icons/chromenewtab.ico">Chrome new tab</option>
-                    <option value="/img/images/icons/desmos.ico">Desmos</option>
-                    <option value="/img/images/icons/gmail.ico">Gmail</option>
-                    <option value="/img/images/icons/googleclassroom.ico">Google Classroom</option>
-                    <option value="/img/images/icons/googledrive.ico">Google Drive</option>
-                    <option value="/img/images/icons/googlekeeps.ico">Google Keep</option>
-                    <option value="/img/images/icons/googlesheets.ico">Google Sheets</option>
-                    <option value="/img/images/icons/googleslides.ico">Google Slides</option>
-                    <option value="/img/images/icons/ixl.ico">Ixl</option>
-                    <option value="/img/images/icons/khanacademy.ico">Khan Academy</option>
-                    <option value="/img/images/icons/pornhub.ico">Pornhub</option>
-                    <option value="/img/images/icons/wikipedia.ico">Wikipedia</option>
-                </select>
-                <button id="saveFaviconSelectButton">Save</button>
-            </div>
-            <div class="settingsColumn">
                 <div class="settings-container">
                     <center><h1>Cloaking settings</h1></center>
                     <div class="toggle-container">
-                      <label for="popupToggle">Enable Forced cloaking</label>
                       <label class="toggle-switch">
                         <input type="checkbox" id="popupToggle">
                         <span class="slider"></span>
                       </label>
                     </div>
                   </div>
-                  <a id="openScriptButton"><button>Open about:blank</button></a>
-            </div>
-            <div class="settingsColumn">
-
+                  <a id="openScriptButton"><button id="type">Open about:blank</button></a>
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
