--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -164,7 +164,7 @@ button:hover{
         <center><div class="text">Starlight's Media/Movies</div></center>
         <div id="search-bar">
             <input type="text" id="search" placeholder="Search for a movie or TV show...">
-            <button>Search</button>
+            <button id="searchButton">Search</button>
         </div>
         <div id="results"></div>
 
