--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -41,7 +41,7 @@
         </nav>
         <br>
         <br>
-        <center><div class="text">Starlight's Arcade</div></center>
+        <center><div class="text">Starlight's Arcade/Games</div></center>
         <br>
         <center>
             <select id="categorySelect">
