--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -54,14 +54,15 @@
             <div class="settingsColumn">
                 <div class="settings-container">
                     <center><h1>Cloaking settings</h1></center>
-                    <div class="toggle-container">
+                    <center><div class="toggle-container">
                       <label class="toggle-switch">
                         <input type="checkbox" id="popupToggle">
                         <span class="slider"></span>
                       </label>
                     </div>
-                  </div>
-                  <a id="openScriptButton"><button id="type">Open about:blank</button></a>
+                  </div></center>
+
+                  <center><a id="openScriptButton"><button id="type">Open about:blank</button></a></center>
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
