--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -23,7 +23,8 @@
 </script>
 <style>
 #results {
-gap: 20px;
+    margin: 20px;
+gap: 8px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -107,13 +108,6 @@ button:hover{
     box-shadow: 0 2px 10px rgba(106, 106, 106, 0.2);
 	background-color: #606060;
 }
-
-#results, #popularMovies, #popularTVShows, #featured {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Adjusted size */
-            gap: 20px;
-            margin-bottom: 20px;
-        }
         #popup {
             display: none;
             position: fixed;
@@ -132,9 +126,10 @@ button:hover{
             text-align: center;
         }
         #popup input {
+            outline: none;
             margin: 10px;
             padding: 10px;
-            width: 50px;
+            width: 70px;
         }
         #closePopup {
             margin-top: 10px;
