--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -53,16 +53,9 @@
             </div>
             <div class="settingsColumn">
                 <div class="settings-container">
-                    <center><h1>Cloaking settings</h1></center>
-                    <center><div class="toggle-container">
-                      <label class="toggle-switch">
-                        <input type="checkbox" id="popupToggle">
-                        <span class="slider"></span>
-                      </label>
-                    </div>
-                  </div></center>
-
-                  <center><a id="openScriptButton"><button id="type">Open about:blank</button></a></center>
+     <center><a id="openScriptButton"><button id="type">Open about:blank in new tab</button></a></center><br>
+     <center><a id="openscriptButton"><button id="type">Open about:blank in new window</button></a></center>
+             
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
