--- a/general/index.html
+++ b/general/index.html
@@ -44,7 +44,7 @@
         <br>
         <br>
         <br>
-        <div class="text">Welcome to Starlight</div>
+        <center><div class="text">Welcome to Starlight</div></center>
         <div id="splash">Loading...</div>
         <br>
         <center>
