--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -55,7 +55,7 @@
                 <div class="settings-container">
      <center><a id="openScriptButton"><button id="type">Open about:blank in new tab</button></a></center><br>
      <center><a id="openscriptButton"><button id="type">Open about:blank in new window</button></a></center>
-             
+             </div>
             </div>
             <div class="settingsColumn" id="siteInfo">
                 <h1>Site Info</h1>
