--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="column" data-category="Tools">
-                    <a href="/misc/apps/calculator.html"><img src="/img/images/thumbnails/calender.png ">
+                    <a href="/misc/apps/calender.html"><img src="/img/images/thumbnails/calender.png ">
                     <div class="description">
                         <h2>Calender</h2>
                         <p>Set notifications for dates and stuff idk</p> <!-- Shortened description --></a>
