--- a/general/pages/credits.html
+++ b/general/pages/credits.html
@@ -42,6 +42,15 @@
         <br>
         <center><div class="text">Credits</div></center>
         <br>
+        <div id="legal">
+            <center>
+                <div class="text">Credits</div>
+                <br>
+                <h2>3kh0 - for the games</h2><br>
+                <h2>tmdb - for the movie api</h2><br>
+                <h2>TIW - for the proxy base</h2>
+            </center>
+        </div>
        
     </body>
     <script src="/general/js/cloak.js"></script>
