--- a/general/pages/faq.html
+++ b/general/pages/faq.html
@@ -43,7 +43,16 @@
         <br>
         <center><div class="text">FAQ</div></center>
         <br>
-       
+       <div id="legal">
+        <h2>This website is blocked, how can i access it?</h2><br>
+        <h3>You can join our discord server for more links</h3>
+        <hr>
+        <h2>Where can i find the source of these games?</h2><br>
+        <h3>Unfortunately this website is closed source so you cant access it directly but these games are from 3kh0 so check them out on gitlab.</h3>
+        <hr>
+        <h2>Is this website safe?</h2><br>
+        <h3>Other than the movie section, this website is very safe and secure. The movie section uses vidlink which has some suspious looking ads so if opened close it immediately.</h3>
+       </div>
     </body>
     <script src="/general/js/cloak.js"></script>
 </html>
