--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -53,6 +53,7 @@
             </div>
             <div class="settingsColumn">
                 <div class="settings-container">
+                    <h1>Cloaker</h1>
      <center><a id="openScriptButton"><button id="type">Open about:blank in new tab</button></a></center><br>
      <center><a id="openscriptButton"><button id="type">Open about:blank in new window</button></a></center>
              </div>
