another huge cleaning update

--- a/assets/misc/apps/dogeunblocker.html
+++ b/assets/misc/apps/dogeunblocker.html
@@ -170,15 +170,16 @@
         <script>eruda.init();</script>
         <script src="/general/js/global.js"></script>
         <div id="particles-js"></div>
+        
         <nav>
-            <a href="/general/index.html" class="left-link">Starlight</a>
+            <a href="/assets/html/index.html" class="left-link">Starlight</a>
             <div class="nav-links">
-                <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="12px" width="12px">&nbsp;Arcade</a>
-                <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="12px" width="12px">&nbsp;Utilities</a>
-                <a href="/general/pages/media.html"><img src="/img/movies.png" height="12px" width="12px">&nbsp;Media</a>
-                <a href="/general/pages/ai.html"><img src="/img/ai.png" height="12px" width="12px">&nbsp;AI</a>
-                <a href="/general/pages/search.html"><img src="/img/search.png" height="12px" width="12px">&nbsp;Search</a>
-                <a href="/general/pages/settings.html"><img src="/img/settings.png" height="12px" width="12px">&nbsp;Settings</a>
+                <a href="/assets/html/arcade.html"><img src="/assets/images/navicons/arcade.png" height="12px" width="12px">&nbsp;Arcade</a>
+                <a href="/assets/html/utilities.html"><img src="/assets/images/navicons/apps.png" height="12px" width="12px">&nbsp;Utilities</a>
+                <a href="/assets/html/media.html"><img src="/assets/images/navicons/movies.png" height="12px" width="12px">&nbsp;Media</a>
+                <a href="/assets/html/ai.html"><img src="/assets/images/navicons/ai.png" height="12px" width="12px">&nbsp;AI</a>
+                <a href="/assets/html/search.html"><img src="/assets/images/navicons/search.png" height="12px" width="12px">&nbsp;Search</a>
+                <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
             </div>
         </nav>
         <br>
