--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script>
     // Redirect to index.html after a short delay
 setTimeout(function() {
-    window.location.href = '/general/index.html';
+    window.location.href = '/assets/html/index.html';
 }, 1500); // Redirects after 1 second
 
 </script>
